2010-12-18 [colin]	3.7.8cvs10

	* src/compose.c
		Fix bug #2148, "Attachment content-transfer-encoding 
		incorrectly set when signing emails". The RFC 2045
		states that message/* and multipart/* encoding must
		be either 7-bit, 8-bit or binary.

2010-12-18 [mones]	3.7.8cvs9

	* src/ldaputil.c
		Fix crash when searching or adding a LDAP server

2010-12-17 [colin]	3.7.8cvs8

	* configure.ac
	* src/editldap.c
	* src/ldapquery.c
	* src/ldapserver.c
	* src/ldapupdate.c
	* src/ldaputil.c
	* src/ldaputil.h
		Better error logging. Disable LDAP SSL/TLS on
		Windows, it's crashy/non-worky.

2010-12-17 [colin]	3.7.8cvs7

	* src/folder.c
		Fix bug #2325, "messages remains in folder cache after moving
		from MH to IMAP boxes". Bug introduced in 3.7.6cvs53.

2010-12-17 [colin]	3.7.8cvs6

	* src/addressadd.c
	* src/addressbook.c
	* src/addrindex.c
	* src/ldapquery.c
	* src/ldapquery.h
	* src/ldapserver.c
	* src/ldapserver.h
	* src/ldapupdate.c
	* src/ldaputil.c
	* src/ldaputil.h
		Windows build fixes (w32 LDAP completely untested!)

2010-12-16 [colin]	3.7.8cvs5

	* src/addrindex.c
	* src/editldap.c
	* src/ldapctrl.c
	* src/ldapquery.c
	* src/ldapserver.c
	* src/ldapserver.h
	* src/ldapupdate.c
	* src/ldaputil.c
		Try to rationalize a bit LDAP connections

2010-12-16 [colin]	3.7.8cvs4

	* src/prefs_spelling.c
	* src/common/defs.h
		Add a button to get dictionaries (win32)

2010-12-16 [colin]	3.7.8cvs3

	* src/prefs_matcher.c
		Fix bug #2279, "crash when clicking 'define' in filter
		configuring". Thanks to Theodor Ciobanu for the hint at
		the problem.

2010-12-14 [colin]	3.7.8cvs2

	* src/gtk/gtkaspell.c
		Add missing guard for sys/wait.h

2010-12-05 [colin]	3.7.8cvs1

	* tools/make.themes.project
		Seems wget has changed naming of targets downloaded.
		Fix it by always providing our own name.
		[Pushing mones' patch again after messing with CVSROOT]

2010-12-04 [paul]	3.7.8
	* NEWS
	* README
	* RELEASE_NOTES	
		3.7.8 unleashed!

2010-12-03 [paul]	3.7.7cvs11

	* configure.ac