@@ -4084,3 +4084,4 @@
 ( cvs diff -u -r 1.654.2.4156 -r 1.654.2.4157 configure.ac;  cvs diff -u -r 1.8.2.38 -r 1.8.2.39 src/editldap.c;  cvs diff -u -r 1.3.2.36 -r 1.3.2.37 src/ldapquery.c;  cvs diff -u -r 1.4.2.20 -r 1.4.2.21 src/ldapserver.c;  cvs diff -u -r 1.1.2.26 -r 1.1.2.27 src/ldapupdate.c;  cvs diff -u -r 1.1.4.18 -r 1.1.4.19 src/ldaputil.c;  cvs diff -u -r 1.1.4.10 -r 1.1.4.11 src/ldaputil.h;  ) > 3.7.8cvs8.patchset
 ( cvs diff -u -r 1.1.4.19 -r 1.1.4.20 src/ldaputil.c;  ) > 3.7.8cvs9.patchset
 ( cvs diff -u -r 1.382.2.561 -r 1.382.2.562 src/compose.c;  ) > 3.7.8cvs10.patchset
+( cvs diff -u -r 1.4.2.21 -r 1.4.2.22 src/ldapserver.c;  ) > 3.7.8cvs11.patchset
